--- a/app/index.html
+++ b/app/index.html
@@ -131,7 +131,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </paper-material>
 
               <paper-material elevation="1">
-                <p>This is another card.</p>
+                <p class="paper-font-body2">This is another card.</p>
+                <awesome-meme top="ES2015" bottom="is awesome!"></awesome-meme>
               </paper-material>
 
               <paper-material elevation="1">
